--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@pdf-lib/fontkit": "^1.1.1",
+    "@supabase/supabase-js": "^2.89.0",
     "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
